# ml-repo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
Tests/manual-model-building/utilities/: test_generate_polynomials.py  test_neural_network.py
experiments/line_progression/loss_lines/: gini_us.csv  loss-lines.ipynb  loss-lines.py
experiments/line_progression/loss_lines/data/load/: gini_index.py  owid_co2.py  un_life_expectancy.py
manual_model_building/models/: gradient-descent.py
manual_model_building/models/regression/: linear_polynomial_and_logistic.py
manual_model_building/utilities/: extend_data.py  generate_polynomials.py
manual_model_building/visualisation/: training_visualisation.py
src/experiments/line_progression/loss_lines/: README.md  loss-lines.ipynb  loss-lines.py
src/experiments/line_progression/loss_lines/data/load/: owid_co2.py  un_life_expectancy.py
src/experiments/line_progression/loss_lines/outputs/: training_visualisation.py
src/manual_model_building/models/: base.py
src/manual_model_building/models/neural_network/: neural_network.py
src/manual_model_building/models/regression/: linear_polynomial_and_logistic.py
src/manual_model_building/utilities/: activation_functions.py  regularisation.py
src/ml_checklist/: readme.md
