[tool.poetry]
name = "ml-repo"
version = "0.1.0"
description = "A project for holding ML example code and utilities"
authors = ["robin.lord"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
